Survey/style_survey.css
:root {
  --survey-primary-color: #ED008C;
  --survey-secondary-color: #770045;
  --survey-white-color: #FFF;
  --survey-black-color: #000;
  --survey-gray-color: #dfe1e6;
}

.wrap-survey {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 30px;
  width: 100%;
}

.article-survey {
  width: 100%;
  border-top: 1px solid var(--survey-primary-color);
  text-align: center;
  padding: 16px 0;
}

.button-group{
  display: flex;
  align-items: center;
}

.button-group>p{
  margin-right: 8px;
  font-weight: bold;
}

.article-survey .article-survey-button {
  padding: 8px 0;
  width: 50px;
  background-color: var(--survey-white-color);
  color: var(--survey-primary-color);
  cursor: pointer;
  margin: 0px 4px;
  border: 1px solid var(--survey-primary-color);
  border-radius: 4px;
  transition: all .3s;
}

.article-survey .article-survey-button:hover {
  background-color: var(--survey-primary-color);
  color: var(--survey-white-color);
}

.article-survey-button-disabled{
  background-color: var(--survey-gray-color) !important;
  color: var(--survey-white-color) !important;
  border: 1px solid var(--survey-gray-color) !important;
  cursor: not-allowed !important;
}

.article-survey-button-selected {
  background-color: var(--survey-primary-color) !important;
  color: var(--survey-white-color) !important;
  cursor: not-allowed !important;
}

.feedback-survey-dropdown {
  border: 1px solid var(--survey-black-color);
  margin-top: 5px;
  box-shadow: 0 2px 5px 1px var(--survey-gray-color);
  border: 1px solid var(--survey-gray-color);
  border-radius: 3px;
  text-align: left;
  padding: 16px;
  display: none;
}

.header-feedback-survey-dropdown {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 8px;
}

.header-feedback-survey-dropdown>p{
  font-weight: bold;
  margin: 8px 0;
}

.header-feedback-survey-dropdown svg {
  cursor: pointer;
  fill: var(--survey-primary-color);
  transition: all .5s;
}

.header-feedback-survey-dropdown svg:hover {
  fill: var(--survey-secondary-color);
}

.reason-negative-feedback {
  margin: 3px 0;
  display: flex;
  justify-content: start;
  align-items: center;
  gap: 10px;
}

.reason-negative-feedback label {
  width: 100%;
  cursor: pointer;
 
}

.reason-negative-feedback input[type="radio"] {
  -ms-transform: scale(1.2);
  -webkit-transform: scale(1.2);
  transform: scale(1.2);
  cursor: pointer;
}

.feedback-finish {
  display: none;
  text-align: left;
}

.feedback-finish p {
  font-weight: bold;
}

.feedback-survey-dropdown-is-open {
  display: block;
}

.feedback-survey-dropdown-is-closed {
  display: none;
}

